[project]
name = "git-commit-message"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"openai>=1.35.0",
]

[project.scripts]
git-commit-message = "git_commit_message:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["git_commit_message"]
